Major fix for search bar (Z-index: 200;)

--- a/frontend/src/components/PopularDestinations/PopularDestinations.css
+++ b/frontend/src/components/PopularDestinations/PopularDestinations.css
@@ -27,10 +27,10 @@
     width: 100%;
     height: 350px;
     background-image: url('/Clouds.png');
-    background-size: 65%;
+    background-size: contain;
     background-repeat: no-repeat;
     background-position: center;
-    z-index: -100;
+    z-index: -10;
     opacity: 85%;
     transform: translateY(0px);
 }
