--- a/frontend/src/components/SearchBar/SearchBar.css
+++ b/frontend/src/components/SearchBar/SearchBar.css
@@ -7,6 +7,7 @@
     position: relative;
     justify-items: center;
     align-items: center;
+    z-index: 200;
   }
   
   .search-input {
